# mozilla-extensions

./: .gitignore  BOARD.md  CLAUDE.md  LICENSE  MEDIA-VIEWER-REFACTOR.md  MEDIA-VIEWER-SPEC.md  Makefile  README.md  TODO.md  dump-sections  install-common.ps1  install-common.sh  list-sections
BOARD/: .find-new.sh.swp  find-new.sh  triage.tsv
BOARD/done/: audio-el-ownership.1.md  audio-el-ownership.2.md  audio-el-ownership.3.md  audio-el-ownership.4.md  gif-encapsulation.1.md  gif-encapsulation.4.md  hud-and-audio.4.md  imagelike-parent-child-globals.1.md  imagelike-parent-child-globals.4.md  imagepane-migration.4.md  list-ui-di.2.md  list-ui-di.3.md  list-ui-di.4.md  load-context-constructor-check.1.md  load-context-constructor-check.4.md  loaddir-race.3.md  loaddir-race.4.md  popstate-encapsulation.1.md  popstate-encapsulation.2.md  popstate-encapsulation.4.md  queue-prev-param.3.md  queue-prev-param.4.md  queuemode-persistence.3.md  queuemode-persistence.4.md  selector-state-to-statejs.1.md  selector-state-to-statejs.2.md  selector-state-to-statejs.3.md  selector-state-to-statejs.4.md  videocontent-hierarchy.1.md  videocontent-hierarchy.2.md  videocontent-hierarchy.3.md  videocontent-hierarchy.4.md
BOARD/issues/: cdup-navigation.1.md  cdup-navigation.2.md  cdup-navigation.3.md  content-error-handler.1.md  content-error-handler.2.md  content-error-handler.3.md  extended-open.1.md  extended-open.2.md  gif-encapsulation.2.md  gif-encapsulation.3.md  gif-silent-catch.1.md  gif-silent-catch.2.md  gif-silent-catch.3.md  hud-and-audio.1.md  hud-and-audio.2.md  imagelike-parent-child-globals.2.md  imagelike-parent-child-globals.3.md  imagelike-resize-center.1.md  imagelike-resize-center.2.md  imagelike-resize-center.3.md  imagepane-migration.1.md  imagepane-migration.2.md  imagepane-migration.3.md  list-ui-di.1.md  (+21 more)
cbz-extension/: background.js  bridge-worker.js  bridge.html  bridge.js  content.js  manifest.json  manifest.json.in  native-messaging.js  popup.html  popup.js  viewer.css  viewer.html  viewer.js
cbz-native/: cbz-open  cbz_native_host.py  cbz_open.py  cbz_viewer_host.json  install.ps1  install.sh  pyproject.toml
extension-shared/: native-messaging.js
media-extension/: audit-summary.md  background.js  jsconfig.json  manifest.json  manifest.json.in  media-shared.js  native-messaging.js  popup.html  popup.js  state.js  state.md  viewer-audio.js  viewer-content.js  viewer-list.js  viewer-load-context.js  viewer-media-audio.js  viewer-media-gif.js  viewer-media-image.js  viewer-media-imagelike.js  viewer-media-playable.js  viewer-media-queued-video.js  viewer-media-video.js  viewer-media.js  viewer-queue-lists.js  viewer-queue-mgt.js  viewer-selector.js  viewer-transform.js  viewer-ui.js  viewer-util.js  viewer.css  viewer.html  viewer.js
media-native/: install.ps1  install.sh  media-open  media_native_host.py  media_open.py  media_queue.py  media_viewer_host.json  pyproject.toml
media-native/thumbnailers/: __init__.py  _base.py  darwin.py  linux.py  mate.py  pillow.py  win32.py  xdg.py  xfce.py
media-native/thumbnailers/xdg/: __init__.py  mate.py  xfce.py
native-shared/: pyproject.toml
(+7 files in other folders)
